--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@react-oauth/google": "^0.12.2",
     "formik": "^2.4.6",
     "react": "^19.1.1",
+    "react-datepicker": "^8.5.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router": "^7.8.0",
     "react-router-dom": "^7.8.1",
+    "react-time-picker": "^8.0.2",
     "yup": "^1.7.0"
   },
   "devDependencies": {
